subtask 2.3.2
